--- a/src/app/shared/components/customizer/customizer.component.html
+++ b/src/app/shared/components/customizer/customizer.component.html
@@ -1,11 +1,11 @@
-<div class="handle" *ngIf="!isCustomizerOpen">
+<!--<div class="handle" *ngIf="!isCustomizerOpen">
    <button 
     mat-fab
     color="primary" 
     (click)="isCustomizerOpen = true">
       <mat-icon class="spin text-white">settings</mat-icon>
     </button>
-  </div>
+  </div>-->
 <div id="app-customizer" *ngIf="isCustomizerOpen">
   <mat-card class="p-0">
     <mat-card-title class="m-0 light-gray">
