--- a/src/app/views/student-management/view-student/view-student.component.html
+++ b/src/app/views/student-management/view-student/view-student.component.html
@@ -1,66 +1,66 @@
 <mat-card>
-  <div>
+  <div *ngIf='data !=null'>
     <table >
       <tr >
       <th colspan='4' class='address'>Student Admission Details</th>
       </tr>
         <tr>
-          <th>SurName</th>
-          <td>Lastdsa</td> 
           <th>Student Name</th>
-          <td>javeed shaikh</td>
+          <td>{{data.studentsName}}</td>
+          <th>SurName</th>
+          <td>{{data.surName}}</td> 
         </tr>
         <tr>
         <th>Guardian Name</th>
-        <td>sjadksjadnads</td>
+        <td>{{data.guardiansName}}</td>
         <th>Student Reg No</th>
-        <td>4554566</td>
+        <td>{{data.studentRegNo}}</td>
         </tr>
         <tr>
         <th>Father Name</th>
-        <td>Shaikh Zafar</td>
+        <td>{{data.fathersName}}</td>
         <th>Mother Name</th>
-        <td>Shaikh Shaheen</td>
+        <td>{{data.mothersName}}</td>
         </tr>
         <tr>
         <th>Income</th>
-        <td>15,000</td>
+        <td>{{data.income}}</td>
         <th>UID No</th>
-        <td>7895KHS4</td>
+        <td>{{data.uidNo}}</td>
         </tr>
         <tr>
         <th>ID No</th>
-        <td>CKHPA9727R</td>
+        <td>{{data.idNo}}</td>
         <th>Contact No</th>
-        <td>9822654560</td>
+        <td>{{data.contactNo}}</td>
         </tr>
         <tr>
         <th>Status</th>
-        <td>Present</td>
+        <td>{{data.status}}</td>
         <th>Live Status</th>
-        <td>Active</td>
+        <td>{{data.liveStatus}}</td>
         </tr>
         <tr>
         <th>Date</th>
-        <td>2020-06-07</td>
+        <td>{{data.date}}</td>
         <th>DOB</th>
-        <td>1994-07-15</td>
+        <td>{{data.dateOfBirth}}</td>
         </tr>
         <tr>
         <th>Date Of Birth In Words</th>
-        <td>eight January nineteen ninety three</td>
+        <td>{{data.dateOfBirthInWords}}</td>
         <th>Place Of Birth</th>
-        <td>Nanded</td>
+        <td>{{data.placeOfBirth}}</td>
         </tr>
         <tr>
         <th>Identity By Mark Or/AadharNo</th>
-        <td>mole on left hand</td>
+        <td>{{}data.identityByMarkOrAadharNo}</td>
         <th>Gender</th>
-        <td>Male</td>
+        <td>{{data.gender}}</td>
         </tr>
        <tr>
         <th>Class</th>
-        <td>Nursery</td>
+        <td>{{Nursery}}</td>
         <th>School</th>
         <td>Al-Rizwan</td>
         </tr>
@@ -88,6 +88,7 @@
         <th>Nationality</th>
         <td>Indian</td>
         </tr>
+        <ng-container *ngFor='let x of data.address'>
         <tr>
         <th colspan='4' class='address'>Student Address Details</th>
         </tr>
@@ -107,8 +108,9 @@
         </tr>
         <tr>
         <th>Address</th>
-        <th colspan='3'></th>
+        <th colspan='3'>{{x.detailAddress}}</th>
         </tr>
+      </ng-container>
         </table>
       
   </div>
