--- a/src/app/views/administration/admin-table/religion-table/religion-table.component.html
+++ b/src/app/views/administration/admin-table/religion-table/religion-table.component.html
@@ -21,7 +21,7 @@
   
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Code </th>
-        <td mat-cell *matCellDef="let element"> {{element.religionCode}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
       </ng-container>
   
       <ng-container matColumnDef="edit">
