--- a/src/app/views/student-management/students-table/students-table.component.html
+++ b/src/app/views/student-management/students-table/students-table.component.html
@@ -52,7 +52,7 @@
       <ng-container matColumnDef="view">
         <th mat-header-cell *matHeaderCellDef class="icon-align ">View</th>
         <td mat-cell *matCellDef="let element" class="icon-align">
-          <i class="material-icons icon-btn" matTooltip='Student Details' [routerLink]="['/student-managment/view-student/'+element.id]" style="color:#008080;cursor: pointer;margin-top: 7px;" color="primary">visibility</i>
+          <i class="material-icons icon-btn" matTooltip='Student Details' [routerLink]="['/student-managment/view-student/',element.id]" style="color:#008080;cursor: pointer;margin-top: 7px;" color="primary">visibility</i>
         </td>
       </ng-container>
   
