--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,6 @@
 <footer class="main-footer">
   <span class="m-auto"></span>
-  Design & Developed by <a  style='margin-right:2%;margin-left: 5px;' href="https://ui-lib.com">Tech Weaver</a>
+  <div style="position:absolute ; text-align: center; margin-left: 350px;">
+  Design & Developed by <a  style='margin-left: 5px; font-weight: bold; color: blue; ' href="http://techweaversystems.com/" ><u>Tech Weaver</u></a> &copy;Copyright 2020
+</div>
 </footer>
