--- a/src/app/shared/components/sidebar-side/sidebar-side.component.html
+++ b/src/app/shared/components/sidebar-side/sidebar-side.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <span class="app-user-name mb-05">
                 <mat-icon class="icon-xs text-muted">lock</mat-icon> 
-                AL-Rizwan School
+               <b> AL-Rizwan Institutions</b>
                 </span>
                 <!-- Small buttons -->
                 <div class="app-user-controls">
