--- a/src/app/views/administration/branch-master/branch-master.component.html
+++ b/src/app/views/administration/branch-master/branch-master.component.html
@@ -22,7 +22,7 @@
             Branch Code is <strong>required</strong></mat-error>
           <mat-error *ngIf='!branchForm.get("code").hasError("required")
           && branchForm.get("code").hasError("pattern")'>
-            Branch Code  <strong>only Numbers allow</strong></mat-error>
+            Branch Code  <strong>only Alpha Numaric allow</strong></mat-error>
         
         </mat-form-field>
       
