--- a/src/app/views/administration/caste-master/caste-master.component.html
+++ b/src/app/views/administration/caste-master/caste-master.component.html
@@ -19,7 +19,7 @@
             Caste Code is <strong>required</strong></mat-error>
           <mat-error *ngIf='!casteForm.get("code").hasError("required")
           && casteForm.get("code").hasError("pattern")'>
-            Caste Code  <strong>only Number allow</strong></mat-error>
+            Caste Code  <strong>only alpha Numaric allow</strong></mat-error>
         </mat-form-field>
       
         <div>
