--- a/src/app/views/administration/mother-tongue-master/mother-tongue-master.component.html
+++ b/src/app/views/administration/mother-tongue-master/mother-tongue-master.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)">
-  <mat-tab label="First"> 
+  <mat-tab label="Master"> 
 
     <div class="mat-card">
       <mat-toolbar color='primary'><span style="color:#fff">Mother Tongue Master</span></mat-toolbar>
