--- a/src/app/views/administration/school-master/school-master.component.html
+++ b/src/app/views/administration/school-master/school-master.component.html
@@ -22,7 +22,7 @@
           </mat-error>
           <mat-error *ngIf="!schoolForm.get('schoolCode').hasError('required') &&
           schoolForm.get('schoolCode').hasError('pattern')">
-            School Code <strong>only Numbers allow</strong>
+            School Code <strong>Only Alpha Numaric allow</strong>
           </mat-error>
     
         </mat-form-field>
