--- a/src/app/views/administration/school-type-master/school-type-master.component.html
+++ b/src/app/views/administration/school-type-master/school-type-master.component.html
@@ -20,7 +20,7 @@
       <mat-error *ngIf='schoolType.get("schoolCode").hasError("required")'>school Code Name is <strong>
         required</strong></mat-error>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
     <mat-error *ngIf="schoolType.get('schoolCode').hasError('pattern')">
-      school Code  <strong>only Numbers allow</strong>
+      school Code  <strong>Only Alpha Numaric Allow </strong>
     </mat-error>
   
     </mat-form-field>
