--- a/src/app/views/compliant/compliantlist/compliantlist.component.html
+++ b/src/app/views/compliant/compliantlist/compliantlist.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group>
-  <mat-tab label="School List">
+  <mat-tab label="Compliant List">
     <div >
      <!--<mat-card>-->
   <div class='table-card'>
