--- a/src/app/views/compliant/compliant/compliant.component.scss
+++ b/src/app/views/compliant/compliant/compliant.component.scss
@@ -1,34 +1,20 @@
 .mat-toolbar{
     text-align: center!important;  
   }
-  .formFieldAlign{
-      margin-left: 10%;
-      width: 35%;
-  }
-  .form-Field-email{
-      width: 80%;
-      margin-left: 10%;
-  
-  }
-  .formFullFieldAlign{
-      width: 80%;
-      margin-left: 10%;
-  }
-  .submit-btn{
-      margin-top: 3%;
-      margin-bottom: 2%;
-      font-weight: 500;
-      width: 25%;
-      margin-left: 37%;;
-      color:#fff!important; 
-  }
-  
-  .submit-title{
-      font-weight: 500;
-  }
-  .mat-card{
-      position: relative;
-    margin-top:5%;
-    margin-bottom:18%;
-  }
-  
+  .card-card{
+    width: 100%;
+    margin-left: 50%;
+    margin-top: 1%;
+    margin-bottom: 10%;
+    }
+    table {
+        width: 100%;
+      }
+      .mat-form-field {
+        font-size: 14px;
+        width: 100%;
+      }
+      .icon-align{
+        text-align: center !important;
+      }
+      
