--- a/src/app/views/compliant/complianttypes/complianttypes.component.html
+++ b/src/app/views/compliant/complianttypes/complianttypes.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)">
   <mat-tab label="Master">
     <div class="mat-card"> 
-      <mat-toolbar color='primary'><span style="color:#fff">School Master</span> </mat-toolbar>
+      <mat-toolbar color='primary'><span style="color:#fff">Compliant Master</span> </mat-toolbar>
       <form [formGroup]='complianttypesForm' #formDirective="ngForm" (ngSubmit)='submitForm(complianttypesForm,formDirective)'>
         <mat-form-field class="example-full-width formFieldAlign">
           <input matInput formControlName='name' placeholder="Compliant type Name *">
@@ -27,7 +27,7 @@
       </form>
     </div> 
   </mat-tab>
-  <mat-tab label="School List">
+  <mat-tab label="Compliant List">
     <div >
      <!--<mat-card>-->
   <div class='table-card'>
